* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -4,7 +4,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-09-20.</p>
+2004-09-21.</p>
 <p>Only lists non-gui files (NO AWT, Swing, or gtk-peer)</p>
 <p>This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
@@ -26,13 +26,14 @@ differences are currently required.</p>
 <tr> <td class="GCJ-specific">gnu.java.net.protocol.core.Connection</td> <td class="GCJ-specific">GCJ-specific</td> </tr>
 <tr> <td class="GCJ-specific">gnu.java.net.protocol.core.CoreInputStream</td> <td class="GCJ-specific">GCJ-specific</td> </tr>
 <tr> <td class="GCJ-specific">gnu.java.net.protocol.core.Handler</td> <td class="GCJ-specific">GCJ-specific</td> </tr>
-<tr> <td class="needsmerge">gnu.java.net.protocol.file.Handler</td> <td class="needsmerge"><a href="compare/gnu.java.net.protocol.file.Handler.diff">Diff</a></td> </tr>
 <tr> <td class="GCJ-specific">gnu.java.net.protocol.gcjlib.Connection</td> <td class="GCJ-specific">GCJ-specific</td> </tr>
 <tr> <td class="GCJ-specific">gnu.java.net.protocol.gcjlib.Handler</td> <td class="GCJ-specific">GCJ-specific</td> </tr>
 <tr> <td class="needsmerge">gnu.java.net.protocol.jar.Connection</td> <td class="needsmerge"><a href="compare/gnu.java.net.protocol.jar.Connection.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.nio.PipeImpl</td> <td class="needsmerge"><a href="compare/gnu.java.nio.PipeImpl.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.nio.SelectorImpl</td> <td class="needsmerge"><a href="compare/gnu.java.nio.SelectorImpl.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">gnu.java.nio.channels.FileChannelImpl</td> <td class="needsmerge"><a href="compare/gnu.java.nio.channels.FileChannelImpl.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.rmi.server.UnicastServer</td> <td class="needsmerge"><a href="compare/gnu.java.rmi.server.UnicastServer.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.rmi.server.UnicastServerRef</td> <td class="needsmerge"><a href="compare/gnu.java.rmi.server.UnicastServerRef.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">gnu.java.security.PolicyFile</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.javax.rmi.CORBA.DelegateFactory</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.javax.rmi.CORBA.GetDelegateInstanceException</td> <td class="classpath-only">Classpath-only</td> </tr>
@@ -63,6 +64,7 @@ differences are currently required.</p>
 <tr> <td class="GCJ-specific">java.lang.PosixProcess</td> <td class="GCJ-specific">GCJ-specific</td> </tr>
 <tr> <td class="needsmerge">java.lang.Runtime</td> <td class="needsmerge"><a href="compare/java.lang.Runtime.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.lang.SecurityManager</td> <td class="needsmerge"><a href="compare/java.lang.SecurityManager.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.lang.StackTraceElement</td> <td class="needsmerge"><a href="compare/java.lang.StackTraceElement.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.lang.String</td> <td class="needsmerge"><a href="compare/java.lang.String.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.lang.StringBuffer</td> <td class="needsmerge"><a href="compare/java.lang.StringBuffer.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.lang.System</td> <td class="needsmerge"><a href="compare/java.lang.System.diff">Diff</a></td> </tr>
@@ -84,6 +86,7 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.net.InetAddress</td> <td class="needsmerge"><a href="compare/java.net.InetAddress.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.JarURLConnection</td> <td class="needsmerge"><a href="compare/java.net.JarURLConnection.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.net.MimeTypeMapper</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="needsmerge">java.net.Socket</td> <td class="needsmerge"><a href="compare/java.net.Socket.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.URL</td> <td class="needsmerge"><a href="compare/java.net.URL.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.URLClassLoader</td> <td class="needsmerge"><a href="compare/java.net.URLClassLoader.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.URLConnection</td> <td class="needsmerge"><a href="compare/java.net.URLConnection.diff">Diff</a></td> </tr>
