--- a/htdocs/java/gui-compare/libgcj-classpath-compare.html
+++ b/htdocs/java/gui-compare/libgcj-classpath-compare.html
@@ -4,7 +4,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-09-20.</p>
+2004-09-21.</p>
 <p>Only lists gui files (AWT, Swing, and gtk-peer)</p>
 <p>This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
@@ -76,6 +76,7 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.awt.image.DataBufferInt</td> <td class="needsmerge"><a href="compare/java.awt.image.DataBufferInt.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.DataBufferShort</td> <td class="needsmerge"><a href="compare/java.awt.image.DataBufferShort.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.DataBufferUShort</td> <td class="needsmerge"><a href="compare/java.awt.image.DataBufferUShort.diff">Diff</a></td> </tr>
+<tr> <td class="libgcj-only">java.awt.image.MultiPixelPackedSampleModel</td> <td class="libgcj-only">GCJ-only</td> </tr>
 <tr> <td class="needsmerge">java.awt.image.PixelGrabber</td> <td class="needsmerge"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.Raster</td> <td class="needsmerge"><a href="compare/java.awt.image.Raster.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.SinglePixelPackedSampleModel</td> <td class="needsmerge"><a href="compare/java.awt.image.SinglePixelPackedSampleModel.diff">Diff</a></td> </tr>
@@ -89,6 +90,7 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">javax.swing.JComponent</td> <td class="needsmerge"><a href="compare/javax.swing.JComponent.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JDesktopPane</td> <td class="needsmerge"><a href="compare/javax.swing.JDesktopPane.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JFrame</td> <td class="needsmerge"><a href="compare/javax.swing.JFrame.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.JInternalFrame</td> <td class="needsmerge"><a href="compare/javax.swing.JInternalFrame.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JLabel</td> <td class="needsmerge"><a href="compare/javax.swing.JLabel.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JMenu</td> <td class="needsmerge"><a href="compare/javax.swing.JMenu.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JPasswordField</td> <td class="needsmerge"><a href="compare/javax.swing.JPasswordField.diff">Diff</a></td> </tr>
@@ -115,6 +117,7 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">javax.swing.plaf.basic.BasicButtonListener</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicButtonListener.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.plaf.basic.BasicComboBoxUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicComboBoxUI.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.plaf.basic.BasicComboPopup</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicComboPopup.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicInternalFrameTitlePane</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicInternalFrameTitlePane.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.plaf.basic.BasicPasswordFieldUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicPasswordFieldUI.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.plaf.basic.BasicScrollBarUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicScrollBarUI.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.plaf.basic.BasicSplitPaneDivider</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicSplitPaneDivider.diff">Diff</a></td> </tr>
