* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/gui-compare/libgcj-classpath-compare.html
+++ b/htdocs/java/gui-compare/libgcj-classpath-compare.html
@@ -4,7 +4,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2004-09-21.</p>
+2004-09-22.</p>
 <p>Only lists gui files (AWT, Swing, and gtk-peer)</p>
 <p>This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
@@ -69,6 +69,7 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.awt.geom.QuadCurve2D</td> <td class="needsmerge"><a href="compare/java.awt.geom.QuadCurve2D.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.geom.Rectangle2D</td> <td class="needsmerge"><a href="compare/java.awt.geom.Rectangle2D.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.ColorModel</td> <td class="needsmerge"><a href="compare/java.awt.image.ColorModel.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.awt.image.ComponentSampleModel</td> <td class="needsmerge"><a href="compare/java.awt.image.ComponentSampleModel.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.DataBuffer</td> <td class="needsmerge"><a href="compare/java.awt.image.DataBuffer.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.DataBufferByte</td> <td class="needsmerge"><a href="compare/java.awt.image.DataBufferByte.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.DataBufferDouble</td> <td class="needsmerge"><a href="compare/java.awt.image.DataBufferDouble.diff">Diff</a></td> </tr>
