--- a/htdocs/codingconventions.html
+++ b/htdocs/codingconventions.html
@@ -437,9 +437,9 @@ When you check in a patch to one of these files, please check it in
 the src tree too, or ask someone else with CVS write access there to
 do so.</li>
 
-<li>Top-level depcomp, install-sh, missing, and mkinstalldirs:  These are
-copied from automake, using
-<code>automake-1.7 --add-missing --copy --force-missing</code>.</li>
+<li>Top-level compile, depcomp, install-sh, missing, mkinstalldirs,
+symlink-tree and ylwrap:  These are copied from CVS mainline automake, using
+<code>automake --add-missing --copy --force-missing</code>.</li>
 
 <li>fastjar: The master sources are at <a
 href="http://fastjar.sourceforge.net/">fastjar.sourceforge.net</a>.
