Add a link to the new gui comparison page. Add a news item about all the new security packages that were imported from GNU Classpath.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -48,7 +48,10 @@ GDB and related tools are
 <a href="http://www.gnu.org/philosophy/free-sw.html">Free Software</a>.  
 libgcj is slowly being merged with <a
 href="http://www.gnu.org/software/classpath/">GNU Classpath</a>.  (You
-can see the <a href="libgcj-classpath-compare.html">status of the merge</a>.)
+can see the <a href="libgcj-classpath-compare.html">status of the merge</a>
+between libgcj CVS and GNU Classpath CVS. And the
+<a href="gui-compare/libgcj-classpath-compare.html">status of the gui branch
+merge</a>.)
 </p>
 
 <p>
@@ -78,6 +81,24 @@ and <code>javax.security.cert</code> support), we recommend
 <table>
 
 <!-- News entries start here -->
+
+<tr><td valign="top">
+<b>July 21, 2004</b>
+</td><td>
+Andreas Tobler imported the new <code>javax.crypto</code>,
+<code>javax.crypto.interfaces</code>, <code>javax.crypto.spec</code>,
+<code>javax.net</code>, <code>javax.net.ssl</code>,
+<code>javax.security.auth</code>, <code>javax.security.auth.callback</code>,
+<code>javax.security.auth.login</code>, <code>javax.security.auth.x500</code>,
+<code>javax.security.sasl</code> and <code>org.ietf.jgss</code>
+packages from the latest
+<a href="http://www,gnu.org/software/classpath/">GNU Classpath</a> 0.11
+developer snapshot release.  These packages will be an official part of
+then next major release.  Extra crypto algorithms can be obtained
+from the <a href="http://www.gnu.org/software/gnu-crypto/">GNU Crypto</a>
+project, a full TLS implementation is provided by the
+<a href="http://www.nongnu.org/jessie/">Jessie</a> project.
+</td></tr>
 
 <tr><td valign="top">
 <b>July 16, 2004</b>
