Fix www.gnu.org link.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -92,7 +92,7 @@ Andreas Tobler imported the new <code>javax.crypto</code>,
 <code>javax.security.auth.login</code>, <code>javax.security.auth.x500</code>,
 <code>javax.security.sasl</code> and <code>org.ietf.jgss</code>
 packages from the latest
-<a href="http://www,gnu.org/software/classpath/">GNU Classpath</a> 0.11
+<a href="http://www.gnu.org/software/classpath/">GNU Classpath</a> 0.11
 developer snapshot release.  These packages will be an official part of
 then next major release.  Extra crypto algorithms can be obtained
 from the <a href="http://www.gnu.org/software/gnu-crypto/">GNU Crypto</a>
