Document attribute `sentinel' in GCC-4.0 changes.html

--- a/htdocs/gcc-4.0/changes.html
+++ b/htdocs/gcc-4.0/changes.html
@@ -44,6 +44,16 @@
 
 <h2>New Languages and Language specific improvements</h2>
 
+<h3>C family</h3>
+
+  <ul>
+    <li>The <code>sentinel</code> attribute has been added to GCC.
+        This function attribute allows GCC to warn when variadic
+        functions such as <code>execl</code> are not <code>NULL</code>
+        terminated.  See the GCC manual for a complete description of
+        it's behavior.</li>
+  </ul>
+
 <h3>C and Objective-C</h3>
 
   <ul>
