--- a/htdocs/gcc-4.0/changes.html
+++ b/htdocs/gcc-4.0/changes.html
@@ -51,7 +51,7 @@
         This function attribute allows GCC to warn when variadic
         functions such as <code>execl</code> are not <code>NULL</code>
         terminated.  See the GCC manual for a complete description of
-        it's behavior.</li>
+        its behavior.</li>
   </ul>
 
 <h3>C and Objective-C</h3>
