* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -4,7 +4,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-Sat Sep 25 12:18:39 UTC 2004</p>
+Sun Sep 26 13:01:09 UTC 2004</p>
 <p>Only lists non-gui files (NO AWT, Swing, or gtk-peer)</p>
 <p>This table intentionally omits certain classes which are not of
 interest.  If the second column shows a "Diff" link, then that means
@@ -74,7 +74,6 @@ differences are currently required.</p>
 <tr> <td class="VM-specific">java.lang.reflect.Field</td> <td class="VM-specific">VM-specific</td> </tr>
 <tr> <td class="VM-specific">java.lang.reflect.Method</td> <td class="VM-specific">VM-specific</td> </tr>
 <tr> <td class="needsmerge">java.lang.reflect.Modifier</td> <td class="needsmerge"><a href="compare/java.lang.reflect.Modifier.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.lang.reflect.Proxy</td> <td class="needsmerge"><a href="compare/java.lang.reflect.Proxy.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.Inet4Address</td> <td class="needsmerge"><a href="compare/java.net.Inet4Address.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.Inet6Address</td> <td class="needsmerge"><a href="compare/java.net.Inet6Address.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.InetAddress</td> <td class="needsmerge"><a href="compare/java.net.InetAddress.diff">Diff</a></td> </tr>
@@ -94,7 +93,7 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.text.Collator</td> <td class="needsmerge"><a href="compare/java.text.Collator.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.Calendar</td> <td class="needsmerge"><a href="compare/java.util.Calendar.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.ResourceBundle</td> <td class="needsmerge"><a href="compare/java.util.ResourceBundle.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.util.TimeZone</td> <td class="needsmerge"><a href="compare/java.util.TimeZone.diff">Diff</a></td> </tr>
+<tr> <td class="VM-specific">java.util.VMTimeZone</td> <td class="VM-specific">VM-specific</td> </tr>
 <tr> <td class="needsmerge">java.util.zip.Deflater</td> <td class="needsmerge"><a href="compare/java.util.zip.Deflater.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.util.zip.DeflaterConstants</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">java.util.zip.DeflaterEngine</td> <td class="classpath-only">Classpath-only</td> </tr>
