--- a/htdocs/java/gui-compare/libgcj-classpath-compare.html
+++ b/htdocs/java/gui-compare/libgcj-classpath-compare.html
@@ -4,7 +4,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-Sat Sep 25 12:19:02 UTC 2004</p>
+Sun Sep 26 13:01:31 UTC 2004</p>
 <p>Only lists gui files (AWT, Swing, and gtk-peer)</p>
 <p>This table intentionally omits certain classes which are not of
 interest.  If the second column shows a "Diff" link, then that means
@@ -18,23 +18,17 @@ differences are currently required.</p>
 <tr> <td class="libgcj-only">gnu.java.awt.peer.gtk.Test</td> <td class="libgcj-only">GCJ-only</td> </tr>
 <tr> <td class="libgcj-only">gnu.java.awt.peer.gtk.TestAWT</td> <td class="libgcj-only">GCJ-only</td> </tr>
 <tr> <td class="needsmerge">java.awt.Window</td> <td class="needsmerge"><a href="compare/java.awt.Window.diff">Diff</a></td> </tr>
+<tr> <td class="libgcj-only">java.awt.image.BandedSampleModel</td> <td class="libgcj-only">GCJ-only</td> </tr>
 <tr> <td class="needsmerge">java.awt.image.PixelGrabber</td> <td class="needsmerge"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.JApplet</td> <td class="needsmerge"><a href="compare/javax.swing.JApplet.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.JCheckBox</td> <td class="needsmerge"><a href="compare/javax.swing.JCheckBox.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.JComponent</td> <td class="needsmerge"><a href="compare/javax.swing.JComponent.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JFrame</td> <td class="needsmerge"><a href="compare/javax.swing.JFrame.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.JMenu</td> <td class="needsmerge"><a href="compare/javax.swing.JMenu.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JPasswordField</td> <td class="needsmerge"><a href="compare/javax.swing.JPasswordField.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JRadioButton</td> <td class="needsmerge"><a href="compare/javax.swing.JRadioButton.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JRootPane</td> <td class="needsmerge"><a href="compare/javax.swing.JRootPane.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.JScrollPane</td> <td class="needsmerge"><a href="compare/javax.swing.JScrollPane.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JSpinner</td> <td class="needsmerge"><a href="compare/javax.swing.JSpinner.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.JTable</td> <td class="needsmerge"><a href="compare/javax.swing.JTable.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JTextArea</td> <td class="needsmerge"><a href="compare/javax.swing.JTextArea.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JTextField</td> <td class="needsmerge"><a href="compare/javax.swing.JTextField.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JToggleButton</td> <td class="needsmerge"><a href="compare/javax.swing.JToggleButton.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.JTree</td> <td class="needsmerge"><a href="compare/javax.swing.JTree.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">javax.swing.JViewport</td> <td class="needsmerge"><a href="compare/javax.swing.JViewport.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.SpinnerNumberModel</td> <td class="needsmerge"><a href="compare/javax.swing.SpinnerNumberModel.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.SpringLayout</td> <td class="needsmerge"><a href="compare/javax.swing.SpringLayout.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">javax.swing.UIDefaults</td> <td class="needsmerge"><a href="compare/javax.swing.UIDefaults.diff">Diff</a></td> </tr>
