Mention tree-ssa merge

--- a/htdocs/gcc-4.0/changes.html
+++ b/htdocs/gcc-4.0/changes.html
@@ -40,7 +40,35 @@
     to replace the need for this option.</li>
   </ul>
 
-<h2>General Optimizer Improvements</h2>
+<h2>General Optimizer Improvemente</h2>
+
+  <ul>
+    <li>
+        <p>The <a href="../projects/tree-ssa/">tree ssa</a>
+        branch has been merged.  This merge has brought in a completely
+        new optimization framework based on a higher level intermediate
+        representation than the existing RTL representation.  Numerous
+        new code transformations based on the new framework are available
+        in GCC 4.0, including:</p>
+
+        <p><ul>
+          <li>Scalar replacement of aggregates</li>
+          <li>Constant propagation</li>
+          <li>Value range propagation</li>
+          <li>Partial redundancy elimination</li>
+          <li>Load and store motion</li>
+          <li>Strength reduction<li>
+          <li>Dead store elimination</li>
+          <li>Dead and unreachable code elimination</li>
+          <li>Autovectorization</li>
+          <li>Loop interchange</li>
+          <li>Tail recursion by accumulation</li>
+        </ul></p>
+
+        <p>Many of these passes outperform their counterparts from previous
+        GCC releases.</p>
+    </li>
+  </ul>
 
 <h2>New Languages and Language specific improvements</h2>
 
@@ -104,7 +132,8 @@
         Most users should leave this alone, but embedded programmers may
         want to disable this by specifying
         <code>-fno-threadsafe-statics</code> for a small savings in code
-        size.</li> </ul>
+        size.</li>
+  </ul>
 
 <h3>Java</h3>
 
@@ -122,6 +151,16 @@
         that point to the preferred versions of these tools.
     </li>
   </ul>
+
+<h3>Fortran</h3>
+
+  <ul>
+    <li>A new <a href="http://gcc.gnu.org/fortran/">Fortran</a> front end
+        has replaced the aging GNU Fortran 77 front end.  The new front end
+        supports Fortran 90 and Fortran 95.  It may not yet be as stable as
+        the old Fortran front end.
+    </li>
+  </ul> 
 
 <h2>New Targets and Target Specific Improvements</h2>
 
@@ -150,6 +189,9 @@
     <li>The x87's <code>fsincos</code> instruction is now used automatically
         with <code>-ffast-math</code> when calculating both the sin and cos
         of the same argument.</li>
+
+    <li>Instruction selection for multiplication and division by constants
+        has been improved.</li>
   </ul>
 
 <h3>IA-64</h3>
