*sigh* fix formatting

--- a/htdocs/gcc-4.0/changes.html
+++ b/htdocs/gcc-4.0/changes.html
@@ -44,29 +44,29 @@
 
   <ul>
     <li>
-        <p>The <a href="../projects/tree-ssa/">tree ssa</a>
+        The <a href="../projects/tree-ssa/">tree ssa</a>
         branch has been merged.  This merge has brought in a completely
         new optimization framework based on a higher level intermediate
         representation than the existing RTL representation.  Numerous
         new code transformations based on the new framework are available
-        in GCC 4.0, including:</p>
+        in GCC 4.0, including:<br />
 
-        <p><ul>
+        <ul>
           <li>Scalar replacement of aggregates</li>
           <li>Constant propagation</li>
           <li>Value range propagation</li>
           <li>Partial redundancy elimination</li>
           <li>Load and store motion</li>
-          <li>Strength reduction<li>
+          <li>Strength reduction</li>
           <li>Dead store elimination</li>
           <li>Dead and unreachable code elimination</li>
           <li>Autovectorization</li>
           <li>Loop interchange</li>
           <li>Tail recursion by accumulation</li>
-        </ul></p>
+        </ul><br />
 
-        <p>Many of these passes outperform their counterparts from previous
-        GCC releases.</p>
+        Many of these passes outperform their counterparts from previous
+        GCC releases.
     </li>
   </ul>
 
