--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -4,7 +4,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-Sun Sep 26 13:01:09 UTC 2004</p>
+Mon Sep 27 12:54:21 UTC 2004</p>
 <p>Only lists non-gui files (NO AWT, Swing, or gtk-peer)</p>
 <p>This table intentionally omits certain classes which are not of
 interest.  If the second column shows a "Diff" link, then that means
@@ -63,7 +63,6 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.lang.StringBuffer</td> <td class="needsmerge"><a href="compare/java.lang.StringBuffer.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.lang.System</td> <td class="needsmerge"><a href="compare/java.lang.System.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.lang.Thread</td> <td class="needsmerge"><a href="compare/java.lang.Thread.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.lang.Throwable</td> <td class="needsmerge"><a href="compare/java.lang.Throwable.diff">Diff</a></td> </tr>
 <tr> <td class="VM-specific">java.lang.VMClassLoader</td> <td class="VM-specific">VM-specific</td> </tr>
 <tr> <td class="VM-specific">java.lang.VMSecurityManager</td> <td class="VM-specific">VM-specific</td> </tr>
 <tr> <td class="VM-specific">java.lang.VMThrowable</td> <td class="VM-specific">VM-specific</td> </tr>
@@ -88,10 +87,9 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.security.AccessController</td> <td class="needsmerge"><a href="compare/java.security.AccessController.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.security.BasicPermission</td> <td class="needsmerge"><a href="compare/java.security.BasicPermission.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.security.IntersectingDomainCombiner</td> <td class="classpath-only">Classpath-only</td> </tr>
-<tr> <td class="needsmerge">java.security.ProtectionDomain</td> <td class="needsmerge"><a href="compare/java.security.ProtectionDomain.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.security.SecureClassLoader</td> <td class="needsmerge"><a href="compare/java.security.SecureClassLoader.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.text.Collator</td> <td class="needsmerge"><a href="compare/java.text.Collator.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.Calendar</td> <td class="needsmerge"><a href="compare/java.util.Calendar.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.util.Collections</td> <td class="needsmerge"><a href="compare/java.util.Collections.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.ResourceBundle</td> <td class="needsmerge"><a href="compare/java.util.ResourceBundle.diff">Diff</a></td> </tr>
 <tr> <td class="VM-specific">java.util.VMTimeZone</td> <td class="VM-specific">VM-specific</td> </tr>
 <tr> <td class="needsmerge">java.util.zip.Deflater</td> <td class="needsmerge"><a href="compare/java.util.zip.Deflater.diff">Diff</a></td> </tr>
