--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -4,7 +4,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-Mon Sep 27 12:54:21 UTC 2004</p>
+Mon Sep 27 18:49:55 UTC 2004</p>
 <p>Only lists non-gui files (NO AWT, Swing, or gtk-peer)</p>
 <p>This table intentionally omits certain classes which are not of
 interest.  If the second column shows a "Diff" link, then that means
@@ -29,9 +29,9 @@ differences are currently required.</p>
 <tr> <td class="GCJ-specific">gnu.java.net.protocol.gcjlib.Connection</td> <td class="GCJ-specific">GCJ-specific</td> </tr>
 <tr> <td class="GCJ-specific">gnu.java.net.protocol.gcjlib.Handler</td> <td class="GCJ-specific">GCJ-specific</td> </tr>
 <tr> <td class="needsmerge">gnu.java.net.protocol.jar.Connection</td> <td class="needsmerge"><a href="compare/gnu.java.net.protocol.jar.Connection.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.nio.channels.FileChannelImpl</td> <td class="needsmerge"><a href="compare/gnu.java.nio.channels.FileChannelImpl.diff">Diff</a></td> </tr>
 <tr> <td class="VM-specific">gnu.java.nio.VMPipe</td> <td class="VM-specific">VM-specific</td> </tr>
 <tr> <td class="VM-specific">gnu.java.nio.VMSelector</td> <td class="VM-specific">VM-specific</td> </tr>
-<tr> <td class="needsmerge">gnu.java.nio.channels.FileChannelImpl</td> <td class="needsmerge"><a href="compare/gnu.java.nio.channels.FileChannelImpl.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">gnu.java.security.PolicyFile</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.javax.rmi.CORBA.DelegateFactory</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.javax.rmi.CORBA.GetDelegateInstanceException</td> <td class="classpath-only">Classpath-only</td> </tr>
@@ -57,32 +57,32 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.lang.Float</td> <td class="needsmerge"><a href="compare/java.lang.Float.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.lang.Object</td> <td class="needsmerge"><a href="compare/java.lang.Object.diff">Diff</a></td> </tr>
 <tr> <td class="GCJ-specific">java.lang.PosixProcess</td> <td class="GCJ-specific">GCJ-specific</td> </tr>
+<tr> <td class="merged-expected-diff">java.lang.reflect.Array</td> <td class="merged-expected-diff"><a href="compare/java.lang.reflect.Array.diff">Expected diff</a></td> </tr>
+<tr> <td class="VM-specific">java.lang.reflect.Constructor</td> <td class="VM-specific">VM-specific</td> </tr>
+<tr> <td class="VM-specific">java.lang.reflect.Field</td> <td class="VM-specific">VM-specific</td> </tr>
+<tr> <td class="VM-specific">java.lang.reflect.Method</td> <td class="VM-specific">VM-specific</td> </tr>
+<tr> <td class="merged-expected-diff">java.lang.reflect.Modifier</td> <td class="merged-expected-diff"><a href="compare/java.lang.reflect.Modifier.diff">Expected diff</a></td> </tr>
+<tr> <td class="merged-unexpected-diff">java.lang.ref.Reference</td> <td class="merged-unexpected-diff"><a href="compare/java.lang.ref.Reference.diff">Expected diff changed</a></td> </tr>
 <tr> <td class="needsmerge">java.lang.Runtime</td> <td class="needsmerge"><a href="compare/java.lang.Runtime.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.lang.SecurityManager</td> <td class="needsmerge"><a href="compare/java.lang.SecurityManager.diff">Diff</a></td> </tr>
+<tr> <td class="merged-unexpected-diff">java.lang.StringBuffer</td> <td class="merged-unexpected-diff"><a href="compare/java.lang.StringBuffer.diff">Expected diff changed</a></td> </tr>
 <tr> <td class="needsmerge">java.lang.String</td> <td class="needsmerge"><a href="compare/java.lang.String.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.lang.StringBuffer</td> <td class="needsmerge"><a href="compare/java.lang.StringBuffer.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.lang.System</td> <td class="needsmerge"><a href="compare/java.lang.System.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.lang.Thread</td> <td class="needsmerge"><a href="compare/java.lang.Thread.diff">Diff</a></td> </tr>
 <tr> <td class="VM-specific">java.lang.VMClassLoader</td> <td class="VM-specific">VM-specific</td> </tr>
 <tr> <td class="VM-specific">java.lang.VMSecurityManager</td> <td class="VM-specific">VM-specific</td> </tr>
 <tr> <td class="VM-specific">java.lang.VMThrowable</td> <td class="VM-specific">VM-specific</td> </tr>
 <tr> <td class="GCJ-specific">java.lang.Win32Process</td> <td class="GCJ-specific">GCJ-specific</td> </tr>
-<tr> <td class="needsmerge">java.lang.ref.Reference</td> <td class="needsmerge"><a href="compare/java.lang.ref.Reference.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.lang.reflect.Array</td> <td class="needsmerge"><a href="compare/java.lang.reflect.Array.diff">Diff</a></td> </tr>
-<tr> <td class="VM-specific">java.lang.reflect.Constructor</td> <td class="VM-specific">VM-specific</td> </tr>
-<tr> <td class="VM-specific">java.lang.reflect.Field</td> <td class="VM-specific">VM-specific</td> </tr>
-<tr> <td class="VM-specific">java.lang.reflect.Method</td> <td class="VM-specific">VM-specific</td> </tr>
-<tr> <td class="needsmerge">java.lang.reflect.Modifier</td> <td class="needsmerge"><a href="compare/java.lang.reflect.Modifier.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.Inet4Address</td> <td class="needsmerge"><a href="compare/java.net.Inet4Address.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.Inet6Address</td> <td class="needsmerge"><a href="compare/java.net.Inet6Address.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.InetAddress</td> <td class="needsmerge"><a href="compare/java.net.InetAddress.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.JarURLConnection</td> <td class="needsmerge"><a href="compare/java.net.JarURLConnection.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.net.MimeTypeMapper</td> <td class="classpath-only">Classpath-only</td> </tr>
-<tr> <td class="needsmerge">java.net.URL</td> <td class="needsmerge"><a href="compare/java.net.URL.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.URLClassLoader</td> <td class="needsmerge"><a href="compare/java.net.URLClassLoader.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.net.URLConnection</td> <td class="needsmerge"><a href="compare/java.net.URLConnection.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.nio.DirectByteBufferImpl</td> <td class="needsmerge"><a href="compare/java.nio.DirectByteBufferImpl.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.nio.MappedByteBufferImpl</td> <td class="needsmerge"><a href="compare/java.nio.MappedByteBufferImpl.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.net.URL</td> <td class="needsmerge"><a href="compare/java.net.URL.diff">Diff</a></td> </tr>
+<tr> <td class="merged-unexpected-diff">java.nio.DirectByteBufferImpl</td> <td class="merged-unexpected-diff"><a href="compare/java.nio.DirectByteBufferImpl.diff">Expected diff changed</a></td> </tr>
+<tr> <td class="merged-unexpected-diff">java.nio.MappedByteBufferImpl</td> <td class="merged-unexpected-diff"><a href="compare/java.nio.MappedByteBufferImpl.diff">Expected diff changed</a></td> </tr>
 <tr> <td class="needsmerge">java.security.AccessControlContext</td> <td class="needsmerge"><a href="compare/java.security.AccessControlContext.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.security.AccessController</td> <td class="needsmerge"><a href="compare/java.security.AccessController.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.security.BasicPermission</td> <td class="needsmerge"><a href="compare/java.security.BasicPermission.diff">Diff</a></td> </tr>
@@ -92,18 +92,18 @@ differences are currently required.</p>
 <tr> <td class="needsmerge">java.util.Collections</td> <td class="needsmerge"><a href="compare/java.util.Collections.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.ResourceBundle</td> <td class="needsmerge"><a href="compare/java.util.ResourceBundle.diff">Diff</a></td> </tr>
 <tr> <td class="VM-specific">java.util.VMTimeZone</td> <td class="VM-specific">VM-specific</td> </tr>
-<tr> <td class="needsmerge">java.util.zip.Deflater</td> <td class="needsmerge"><a href="compare/java.util.zip.Deflater.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.util.zip.DeflaterConstants</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">java.util.zip.DeflaterEngine</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">java.util.zip.DeflaterHuffman</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="needsmerge">java.util.zip.Deflater</td> <td class="needsmerge"><a href="compare/java.util.zip.Deflater.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.zip.DeflaterOutputStream</td> <td class="needsmerge"><a href="compare/java.util.zip.DeflaterOutputStream.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.util.zip.DeflaterPending</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">java.util.zip.GZIPInputStream</td> <td class="needsmerge"><a href="compare/java.util.zip.GZIPInputStream.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.util.zip.GZIPOutputStream</td> <td class="needsmerge"><a href="compare/java.util.zip.GZIPOutputStream.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.util.zip.Inflater</td> <td class="needsmerge"><a href="compare/java.util.zip.Inflater.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.util.zip.InflaterDynHeader</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">java.util.zip.InflaterHuffmanTree</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">java.util.zip.InflaterInputStream</td> <td class="needsmerge"><a href="compare/java.util.zip.InflaterInputStream.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.util.zip.Inflater</td> <td class="needsmerge"><a href="compare/java.util.zip.Inflater.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.util.zip.OutputWindow</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">java.util.zip.PendingBuffer</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">java.util.zip.StreamManipulator</td> <td class="classpath-only">Classpath-only</td> </tr>
@@ -111,12 +111,12 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">javax.rmi.CORBA.ClassDesc</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.rmi.CORBA.ObjectImpl</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.rmi.CORBA.PortableRemoteObjectDelegate</td> <td class="classpath-only">Classpath-only</td> </tr>
-<tr> <td class="classpath-only">javax.rmi.CORBA.Stub</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.rmi.CORBA.StubDelegate</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">javax.rmi.CORBA.Stub</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.rmi.CORBA.SystemException</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.rmi.CORBA.Tie</td> <td class="classpath-only">Classpath-only</td> </tr>
-<tr> <td class="classpath-only">javax.rmi.CORBA.Util</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.rmi.CORBA.UtilDelegate</td> <td class="classpath-only">Classpath-only</td> </tr>
+<tr> <td class="classpath-only">javax.rmi.CORBA.Util</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.rmi.CORBA.ValueHandler</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.rmi.ORB</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">javax.rmi.PortableRemoteObject</td> <td class="classpath-only">Classpath-only</td> </tr>
