--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -161,11 +161,6 @@ particular releases or snapshots or the latest snapshot.  </p>
 
 <dl>
 
-  <dt>edge-vector-branch</dt>
-  <dd>This short-lived branch is for the conversion from edge lists to
-  edge vectors using the new <i>vec</i> API.  This branch is being
-  maintained by Ben Elliston.</dd>
-
   <dt><a href="projects/tree-profiling.html">tree-profiling-branch</a></dt>
   <dd>This branch is for the development of profiling heuristics
   and profile based optimizations for trees, such as profile driven inline
@@ -342,7 +337,8 @@ be prefixed with the initials of the distributing organization.</p>
 
 <dl>
 
-  <dt>cp-parser-branch<br />
+  <dt>edge-vector-branch <br />
+  cp-parser-branch<br />
   cp-parser-branch-2<br />
   pch-branch<br />
   gcc-3_4-basic-improvements-branch<br />
