* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/gui-compare/libgcj-classpath-compare.html
+++ b/htdocs/java/gui-compare/libgcj-classpath-compare.html
@@ -4,7 +4,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-Tue Sep 28 12:47:58 UTC 2004</p>
+Thu Sep 30 13:04:55 UTC 2004</p>
 <p>Only lists gui files (AWT, Swing, and gtk-peer)</p>
 <p>This table intentionally omits certain classes which are not of
 interest.  If the second column shows a "Diff" link, then that means
@@ -18,9 +18,10 @@ differences are currently required.</p>
 <tr> <td class="libgcj-only">gnu.java.awt.peer.gtk.Test</td> <td class="libgcj-only">GCJ-only</td> </tr>
 <tr> <td class="libgcj-only">gnu.java.awt.peer.gtk.TestAWT</td> <td class="libgcj-only">GCJ-only</td> </tr>
 <tr> <td class="needsmerge">java.awt.Window</td> <td class="needsmerge"><a href="compare/java.awt.Window.diff">Diff</a></td> </tr>
-<tr> <td class="needsmerge">java.awt.image.IndexColorModel</td> <td class="needsmerge"><a href="compare/java.awt.image.IndexColorModel.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.awt.image.PixelGrabber</td> <td class="needsmerge"><a href="compare/java.awt.image.PixelGrabber.diff">Diff</a></td> </tr>
-<tr> <td class="libgcj-only">java.awt.image.RescaleOp</td> <td class="libgcj-only">GCJ-only</td> </tr>
+<tr> <td class="needsmerge">java.awt.image.RescaleOp</td> <td class="needsmerge"><a href="compare/java.awt.image.RescaleOp.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicComboPopup</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicComboPopup.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">javax.swing.plaf.basic.BasicOptionPaneUI</td> <td class="needsmerge"><a href="compare/javax.swing.plaf.basic.BasicOptionPaneUI.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGlyphVector.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GdkGlyphVector.c.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGraphics2D.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GdkGraphics2D.c.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">jni/gtk-peer/gnu_java_awt_peer_gtk_GdkPixbufDecoder.c</td> <td class="needsmerge"><a href="compare/jni.gtk-peer.gnu_java_awt_peer_gtk_GdkPixbufDecoder.c.diff">Diff</a></td> </tr>
