Add reference to the ppc architecture books.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -216,6 +216,7 @@ names.
   <br /><a href="http://publib.boulder.ibm.com/doc_link/en_US/a_doc_lib/aixassem/alangref/toc.htm">AIX V4.3 Assembler Language Ref.</a>
   <br /><a href="http://publibn.boulder.ibm.com/doc_link/en_US/a_doc_lib/aixassem/alangref/alangreftfrm.htm">AIX 5L Assembler Language Ref.</a>
   <br /><a href="http://www-106.ibm.com/developerworks/linux/library/l-powarch/">A developer's guide to the POWER architecture.</a>
+  <br /><a href="http://www-106.ibm.com/developerworks/eserver/articles/archguide.html">The PowerPC architecture book from IBM.</a>
  </li>
  
  <li>sh
