--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -286,7 +286,7 @@ accessed directly from the repository.</p>
 is a good candidate for being mentioned in the release notes.</p>
 
 <p>Larger accomplishments, either as part of a specific project, or long
-term committment, merit mention on the front page.  Examples include projects
+term commitment, merit mention on the front page.  Examples include projects
 like tree-ssa, new backends, major advances in optimization or standards
 compliance.</p>
 
