* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -4,7 +4,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-Fri Oct  1 13:01:18 UTC 2004</p>
+Sun Oct  3 13:06:18 UTC 2004</p>
 <p>Only lists non-gui files (NO AWT, Swing, or gtk-peer)</p>
 <p>This table intentionally omits certain classes which are not of
 interest.  If the second column shows a "Diff" link, then that means
@@ -32,6 +32,13 @@ differences are currently required.</p>
 <tr> <td class="VM-specific">gnu.java.nio.VMPipe</td> <td class="VM-specific">VM-specific</td> </tr>
 <tr> <td class="VM-specific">gnu.java.nio.VMSelector</td> <td class="VM-specific">VM-specific</td> </tr>
 <tr> <td class="needsmerge">gnu.java.nio.channels.FileChannelImpl</td> <td class="needsmerge"><a href="compare/gnu.java.nio.channels.FileChannelImpl.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.rmi.rmic.RMIC</td> <td class="needsmerge"><a href="compare/gnu.java.rmi.rmic.RMIC.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.rmi.server.RMIHashes</td> <td class="needsmerge"><a href="compare/gnu.java.rmi.server.RMIHashes.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.rmi.server.RMIObjectInputStream</td> <td class="needsmerge"><a href="compare/gnu.java.rmi.server.RMIObjectInputStream.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.rmi.server.UnicastConnection</td> <td class="needsmerge"><a href="compare/gnu.java.rmi.server.UnicastConnection.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.rmi.server.UnicastConnectionManager</td> <td class="needsmerge"><a href="compare/gnu.java.rmi.server.UnicastConnectionManager.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.rmi.server.UnicastRemoteCall</td> <td class="needsmerge"><a href="compare/gnu.java.rmi.server.UnicastRemoteCall.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">gnu.java.rmi.server.UnicastServerRef</td> <td class="needsmerge"><a href="compare/gnu.java.rmi.server.UnicastServerRef.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">gnu.java.security.PolicyFile</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.javax.rmi.CORBA.DelegateFactory</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.javax.rmi.CORBA.GetDelegateInstanceException</td> <td class="classpath-only">Classpath-only</td> </tr>
@@ -41,13 +48,22 @@ differences are currently required.</p>
 <tr> <td class="classpath-only">gnu.javax.rmi.CORBA.ValueHandlerImpl</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="classpath-only">gnu.javax.rmi.PortableServer</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">java.io.BufferedInputStream</td> <td class="needsmerge"><a href="compare/java.io.BufferedInputStream.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.io.CharArrayWriter</td> <td class="needsmerge"><a href="compare/java.io.CharArrayWriter.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.io.DataInputStream</td> <td class="needsmerge"><a href="compare/java.io.DataInputStream.diff">Diff</a></td> </tr>
 <tr> <td class="classpath-only">java.io.DeleteFileHelper</td> <td class="classpath-only">Classpath-only</td> </tr>
 <tr> <td class="needsmerge">java.io.File</td> <td class="needsmerge"><a href="compare/java.io.File.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.io.FileDescriptor</td> <td class="needsmerge"><a href="compare/java.io.FileDescriptor.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.io.FileInputStream</td> <td class="needsmerge"><a href="compare/java.io.FileInputStream.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.io.FileOutputStream</td> <td class="needsmerge"><a href="compare/java.io.FileOutputStream.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.InputStreamReader</td> <td class="needsmerge"><a href="compare/java.io.InputStreamReader.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.ObjectInputStream</td> <td class="needsmerge"><a href="compare/java.io.ObjectInputStream.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.io.ObjectOutputStream</td> <td class="needsmerge"><a href="compare/java.io.ObjectOutputStream.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.io.ObjectStreamClass</td> <td class="needsmerge"><a href="compare/java.io.ObjectStreamClass.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.ObjectStreamField</td> <td class="needsmerge"><a href="compare/java.io.ObjectStreamField.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.OutputStreamWriter</td> <td class="needsmerge"><a href="compare/java.io.OutputStreamWriter.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.io.PipedInputStream</td> <td class="needsmerge"><a href="compare/java.io.PipedInputStream.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.io.PrintStream</td> <td class="needsmerge"><a href="compare/java.io.PrintStream.diff">Diff</a></td> </tr>
+<tr> <td class="needsmerge">java.io.RandomAccessFile</td> <td class="needsmerge"><a href="compare/java.io.RandomAccessFile.diff">Diff</a></td> </tr>
 <tr> <td class="VM-specific">java.io.VMObjectStreamClass</td> <td class="VM-specific">VM-specific</td> </tr>
 <tr> <td class="needsmerge">java.lang.Character</td> <td class="needsmerge"><a href="compare/java.lang.Character.diff">Diff</a></td> </tr>
 <tr> <td class="needsmerge">java.lang.Class</td> <td class="needsmerge"><a href="compare/java.lang.Class.diff">Diff</a></td> </tr>
