--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -264,7 +264,8 @@ particular releases or snapshots or the latest snapshot.  </p>
 
   <dt><a href="projects/cxx-reflection/">cxx-reflection-branch</a></dt>
   <dd>Part of the work on providing support for compile time reflection
-  in C++ is done in this branch.</dd>
+  in C++ is done in this branch.  This branch is maintained by Gabriel
+  Dos Reis &lt;<a href="mailto:gdr@integrable-solutions.net">gdr@integrable-solutions.net</a>&gt;.</dd>
 
   <dt>objc-improvements-branch</dt>
   <dd>This branch was originally used to merge Objective-C bug fixes and
