Add structure-aliasing-branch info

--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -215,6 +215,17 @@ particular releases or snapshots or the latest snapshot.  </p>
   with the tag <code>[tcb]</code> in the subject line.  The usual
   contribution and testing rules apply.  Patches should be CC'd
   to Diego Novillo for final approval.</dd>
+ 
+  <dt>structure-aliasing-branch</dt>
+  <dd>This branch contains improvements to the tree optimizers ability 
+  to do pointer-to-structure aliasing analysis and optimization.  
+  This involves some significant rework of the way
+  our memory information is represented in the tree-ssa form.
+  The branch is maintained by Daniel Berlin.
+  Patches and discussion related to the branch should be marked
+  with the tag <code>[sa]</code> in the subject line.  The usual
+  contribution and testing rules apply.  Patches should be CC'd
+  to Daniel Berlin for final approval.</dd>
 
 </dl>
 
