Fix spelling for Steensgaard.

--- a/htdocs/projects/tree-ssa/index.html
+++ b/htdocs/projects/tree-ssa/index.html
@@ -358,7 +358,7 @@ different passes are welcome.</p>
     whole array.</dd>
 <dt><em>Pointer analysis (aliasing)</em></dt>
 <dd>Dan Berlin is working on Andersen Points-to analysis.
-    Unfortunately we cannot implement Steengaard analysis due to
+    Unfortunately we cannot implement Steensgaard analysis due to
     patent issues.</dd>
 </dl>
 
