--- a/htdocs/gcc-4.0/changes.html
+++ b/htdocs/gcc-4.0/changes.html
@@ -244,6 +244,21 @@
         <code>-mfix-vr4120</code> respectively.</li>
   </ul>
 
+<h3>SPARC</h3>
+  <ul>
+    <li>The option <code>-mflat</code> has been removed.</li>
+    <li>The options <code>-mv8</code>, <code>-msparclite</code>,
+        <code>-mcypress</code>, <code>-msupersparc</code>,
+        <code>-mf930</code> and <code>-mf934</code> have been removed.
+        They have been replaced with <code>-mcpu=xxx</code>.</li>
+    <li>The internal model used to estimate the relative cost of each
+        instruction has been updated.  It is expected to give better
+        results on recent UltraSPARC processors.</li>
+    <li>Code generation for function prologues and epilogues has been
+        improved, resulting in better scheduling and allowing multiple
+        exit points in functions.</li>
+  </ul>
+
 <h3>NetWare</h3>
   <ul>
     <li>Novell NetWare (on ix86, no other hardware platform was ever
