--- a/htdocs/gcc-4.0/changes.html
+++ b/htdocs/gcc-4.0/changes.html
@@ -235,7 +235,7 @@
         schedules at the cost of increased code size.</li>
     <li>Support for the Broadcom SB-1 has been extended.  There is now
         an SB-1 scheduler as well as support for the SB-1-specific
-        paired-single instructions.  Full SB-1 support can selected with
+        paired-single instructions.  Full SB-1 support can be selected with
         <code>-march=sb1</code> while code for any ISA can be optimized
         for the SB-1 using <code>-mtune=sb1</code>.</li>
     <li>The compiler can now work around errata in R4000, R4400 and
